k8s-configuration/deployment-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: sge
  labels:
    app: client
spec:
  replicas: 1
  #strategy:
  #  type: RollingUpdate
  #  rollingUpdate:
  #    maxUnavailable: 1
  #    maxSurge: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: cesar02dd/client:3ccc08a47516caeb427a90cc8b498f81356fbb75
          ports:
            - containerPort: 5173
          #env:
          #  - name: API_REGISTER_ENDPOINT
          #    value: "http://server"
          resources:
            requests:
              cpu: "10m"
              memory: "150Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
