k8s-configuration/deployment-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: sge
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: genesiisdn/mysql:8fac4befa21b6f9ae7984f68205b32035543897f
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: "10m"  
              memory: "200Mi"  
            limits:
              cpu: "300m"  
              memory: "512Mi"  
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mysql-pvc
