k8s-configuration/deployment-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: sge
  labels:
    app: server
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: cesar02dd/server:7d5c79a272d647317c73c5a72115947ff5a9475c
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "10m"  
              memory: "64Mi"  
            limits:
              cpu: "50m"  
              memory: "128Mi"
