k8s-configuration/service-server.yml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: sge
spec:
  selector:
    app: server
  ports:
    - port: 8000
      targetPort: 8000
  #type: LoadBalancer
