k8s-configuration/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
  labels:
    name: ingress-server
spec:
  rules:
    - host: server-register.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port: 
                  number: 8000
